--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyMMJ2I3VQozEAGSX35y5Rhf",
+      "authorship_tag": "ABX9TyMrX/FVhwqEN9802aanI7rm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -932,6 +932,91 @@
       "cell_type": "code",
       "metadata": {
         "id": "6hw0OD3Zx7oB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Length of the vocabulary in chars\n",
+        "vocab_size = len(vocab)\n",
+        "\n",
+        "# The embedding dimension\n",
+        "embed_dim = 64\n",
+        "\n",
+        "# Number of RNN units\n",
+        "rnn_neurons = 1026"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q_iwy5yREZE8",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now let's create a function that easily adapts to different variables as shown above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7xbkv8yvERMG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import LSTM,Dense,Embedding,Dropout,GRU\n",
+        "from tensorflow.keras.losses import sparse_categorical_crossentropy"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3RXtnal-EheI",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Setting up Loss Function\n",
+        "\n",
+        "For our loss we will use sparse categorical crossentropy, which we can import from Keras. We will also set this as logits=True"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A_sC3DvaEeXf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "b9062f5e-e8c5-434e-cdce-4aeaf022f403"
+      },
+      "source": [
+        "help(sparse_categorical_crossentropy)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Help on function sparse_categorical_crossentropy in module tensorflow.python.keras.losses:\n",
+            "\n",
+            "sparse_categorical_crossentropy(y_true, y_pred, from_logits=False, axis=-1)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aHag-glKEkG_",
         "colab_type": "code",
         "colab": {}
       },
