--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyMrX/FVhwqEN9802aanI7rm",
+      "authorship_tag": "ABX9TyM8pkn2AbvsU9mWCuW7FhTR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1014,9 +1014,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "By40IJtGE047",
+        "colab_type": "text"
+      },
+      "source": [
+        "Which is better for accuracy or are they the same? Of course, if you use categorical_crossentropy you use one hot encoding, and if you use sparse_categorical_crossentropy you encode as normal integers. Additionally, when is one better than the other?\n",
+        "\n",
+        "https://datascience.stackexchange.com/questions/41921/sparse-categorical-crossentropy-vs-categorical-crossentropy-keras-accuracy"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "aHag-glKEkG_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def sparse_cat_loss(y_true,y_pred):\n",
+        "  return sparse_categorical_crossentropy(y_true, y_pred, from_logits=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h08xE7PwFGNy",
         "colab_type": "code",
         "colab": {}
       },
