--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyM8pkn2AbvsU9mWCuW7FhTR",
+      "authorship_tag": "ABX9TyN2//0uuv3q1V1UKtdmy6eS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1043,6 +1043,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "h08xE7PwFGNy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def create_model(vocab_size, embed_dim, rnn_neurons, batch_size):\n",
+        "    model = Sequential()\n",
+        "\n",
+        "    model.add(Embedding(vocab_size, embed_dim,batch_input_shape=[batch_size, None]))\n",
+        "\n",
+        "    model.add(GRU(rnn_neurons,return_sequences=True,stateful=True,recurrent_initializer='glorot_uniform'))\n",
+        "\n",
+        "    # Final Dense Layer to Predict\n",
+        "    model.add(Dense(vocab_size))\n",
+        "\n",
+        "    model.compile(optimizer='adam', loss=sparse_cat_loss) \n",
+        "    \n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qZ-5HcuoNxlN",
         "colab_type": "code",
         "colab": {}
       },
