--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyN2//0uuv3q1V1UKtdmy6eS",
+      "authorship_tag": "ABX9TyNLRxdiJ9n9oDuVK4jPLsFr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1068,6 +1068,61 @@
       "cell_type": "code",
       "metadata": {
         "id": "qZ-5HcuoNxlN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = create_model(\n",
+        "  vocab_size = vocab_size,\n",
+        "  embed_dim=embed_dim,\n",
+        "  rnn_neurons=rnn_neurons,\n",
+        "  batch_size=batch_size)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tsWOMDdpN9ow",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 260
+        },
+        "outputId": "ce50ce4a-12a3-4f10-a1e2-79796930f12b"
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "embedding (Embedding)        (128, None, 64)           5376      \n",
+            "_________________________________________________________________\n",
+            "gru (GRU)                    (128, None, 1026)         3361176   \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (128, None, 84)           86268     \n",
+            "=================================================================\n",
+            "Total params: 3,452,820\n",
+            "Trainable params: 3,452,820\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WgFB4m6WOAn0",
         "colab_type": "code",
         "colab": {}
       },
