--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyNLRxdiJ9n9oDuVK4jPLsFr",
+      "authorship_tag": "ABX9TyPPiBDe+PXONEC2Ay4HViYB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "RRcrZUrHhWzi",
         "colab_type": "code",
-        "outputId": "d1a0c697-b57c-4d72-8e0a-9d06f85eba7a",
+        "outputId": "8ee9027a-f5ce-41f3-db4b-c829b2861316",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "BVRRNCmyib5P",
         "colab_type": "code",
-        "outputId": "6b9b4403-df6e-4b3e-869a-38dec7fa7bdd",
+        "outputId": "40777343-0d4d-40d4-cc0d-80cb02d31bf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "j6rqUTswiu5r",
         "colab_type": "code",
-        "outputId": "2efe5513-7e3c-4a41-fe85-75c25f238163",
+        "outputId": "4068b619-e9f3-45a3-ddbb-80067ea1344f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "Xyd_3vJLjA-v",
         "colab_type": "code",
-        "outputId": "6fd70aa7-a74a-4253-ea1a-827e3c00a99f",
+        "outputId": "61aefee9-85fa-46ed-ef32-4ba88e7a0786",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "TXFWWgmkjqyu",
         "colab_type": "code",
-        "outputId": "dd92df2a-761b-4c20-8678-ca60ded030ff",
+        "outputId": "eb3f7902-59a1-433c-c393-53d228d0739d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "jroDkrLPkAoC",
         "colab_type": "code",
-        "outputId": "fa9108cb-9117-45b6-b788-d544793b00d4",
+        "outputId": "c2ee28c1-1cb3-47cd-ffcc-e5350d650bef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "YWyqN_ZcL2jy",
         "colab_type": "code",
-        "outputId": "e281f4da-b608-43b3-8721-d92852af84f5",
+        "outputId": "517dffe0-73a0-4dc7-e4ad-ba370529973e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "rL2sfe9eL89v",
         "colab_type": "code",
-        "outputId": "69fa2e49-bcc1-458a-ae4f-124de121cc21",
+        "outputId": "313f5492-bdfd-4da8-e078-60ea431f853f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "6gSM2wsJMnMq",
         "colab_type": "code",
-        "outputId": "241d5506-7b62-4f7b-aeb6-366c8816818d",
+        "outputId": "6b5731e9-9e23-45e4-a40b-ba48902dbcf9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "BlBlcNvCM_tg",
         "colab_type": "code",
-        "outputId": "83f76837-9ab7-4a18-e011-6fa2ffd06db4",
+        "outputId": "cec8ceef-d13d-4220-b19e-5698eaa21bcd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "LE_KEKkuNUM1",
         "colab_type": "code",
-        "outputId": "b2abd552-612a-49a9-d113-f3510a530ed9",
+        "outputId": "b32838a8-0384-4bdc-c490-d886e359bd5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -522,7 +522,7 @@
       "metadata": {
         "id": "sId8lKDjN6Ch",
         "colab_type": "code",
-        "outputId": "6afc20ee-6774-46e1-dc2a-11771a1054f8",
+        "outputId": "5b120f10-77de-4066-be85-fb0c5be363d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -548,7 +548,7 @@
       "metadata": {
         "id": "ZguReuKNN_Ne",
         "colab_type": "code",
-        "outputId": "92d3b66d-19cc-4ae2-d78e-7d81c638d069",
+        "outputId": "deadd7a5-c859-4217-ad1a-9713d69974e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -608,7 +608,7 @@
       "metadata": {
         "id": "9BNeUeLW1pbe",
         "colab_type": "code",
-        "outputId": "882a7877-bf83-4a6d-a4d6-361d606c560d",
+        "outputId": "ef973d61-1dbf-4ad1-c887-938d3a19e48a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -639,7 +639,7 @@
       "metadata": {
         "id": "EYjLxt7g1tnZ",
         "colab_type": "code",
-        "outputId": "8fb7051f-0bd3-4f2a-d80b-638e53bd4e23",
+        "outputId": "25d145ea-1afb-4fda-e037-e84c7f919a03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 572
@@ -714,7 +714,7 @@
       "metadata": {
         "id": "HPrwaXkYLeIh",
         "colab_type": "code",
-        "outputId": "654a9864-dcb3-4d83-d761-60e41704592c",
+        "outputId": "d90089e2-8495-4e39-f1d2-215587aeab32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -775,7 +775,7 @@
       "metadata": {
         "id": "5LtfgIj0MjAf",
         "colab_type": "code",
-        "outputId": "b3d6e85a-edc4-40c6-c7a1-0462ec5e5f46",
+        "outputId": "5e996d8a-ddf8-408a-81e4-2cd30bbb2719",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -806,7 +806,7 @@
       "metadata": {
         "id": "F5y4CnmxMmBx",
         "colab_type": "code",
-        "outputId": "e37efdd8-057a-411c-c283-ecd2b8a2f7aa",
+        "outputId": "a62ac126-54bf-469b-ce3b-1ada3da63321",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
@@ -889,7 +889,7 @@
       "metadata": {
         "id": "AquQW5lmx6AH",
         "colab_type": "code",
-        "outputId": "eda217c7-2e08-43d2-96b7-b4a99d351279",
+        "outputId": "2573a9b6-63be-49d7-e23d-19485f66c52b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -994,7 +994,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 87
         },
-        "outputId": "143936d7-db7e-46d3-8d69-b71f8ee3c0bf"
+        "outputId": "6b5325cf-98f3-4c3b-dc79-2431d615b81b"
       },
       "source": [
         "help(sparse_categorical_crossentropy)"
@@ -1090,7 +1090,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 260
         },
-        "outputId": "ce50ce4a-12a3-4f10-a1e2-79796930f12b"
+        "outputId": "cc0a1d03-521e-4ed0-e8a4-fb50bfc80b76"
       },
       "source": [
         "model.summary()"
@@ -1117,6 +1117,19 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u8vrhMgSOKxv",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Step 5: Training the model\n",
+        "\n",
+        "Let's make sure everything is ok with our model before we spend too much time training! Let's pass in a batch to confirm the model currently predicts random characters without any training.\n",
+        "\n"
       ]
     },
     {
