--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyPPiBDe+PXONEC2Ay4HViYB",
+      "authorship_tag": "ABX9TyNEB18dweAder3cQXFUeLg+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,26 +42,14 @@
       "metadata": {
         "id": "RRcrZUrHhWzi",
         "colab_type": "code",
-        "outputId": "8ee9027a-f5ce-41f3-db4b-c829b2861316",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
         "# GOOGLE COLLAB USERS ONLY\n",
         "%tensorflow_version 2.x"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -96,7 +84,7 @@
       "metadata": {
         "id": "BVRRNCmyib5P",
         "colab_type": "code",
-        "outputId": "40777343-0d4d-40d4-cc0d-80cb02d31bf3",
+        "outputId": "ccfb1701-2a6f-41cb-99d5-2fbbcd476ec0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -105,7 +93,7 @@
       "source": [
         "tf.__version__"
       ],
-      "execution_count": 3,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -117,7 +105,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 34
         }
       ]
     },
@@ -126,7 +114,7 @@
       "metadata": {
         "id": "j6rqUTswiu5r",
         "colab_type": "code",
-        "outputId": "4068b619-e9f3-45a3-ddbb-80067ea1344f",
+        "outputId": "3f98930a-1deb-47e3-d496-df182a1afa32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -135,7 +123,7 @@
       "source": [
         "plt.figure(figsize=(12,8))"
       ],
-      "execution_count": 4,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,7 +135,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 35
         },
         {
           "output_type": "display_data",
@@ -198,7 +186,7 @@
       "metadata": {
         "id": "Xyd_3vJLjA-v",
         "colab_type": "code",
-        "outputId": "61aefee9-85fa-46ed-ef32-4ba88e7a0786",
+        "outputId": "72c45142-d324-4587-e2e7-8bc8115c080d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -209,7 +197,7 @@
         "text = open(train_path, 'r').read()\n",
         "print(text[:500])"
       ],
-      "execution_count": 6,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +235,7 @@
       "metadata": {
         "id": "TXFWWgmkjqyu",
         "colab_type": "code",
-        "outputId": "eb3f7902-59a1-433c-c393-53d228d0739d",
+        "outputId": "69d4330e-b31f-488d-cd80-5707eaf444a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -259,7 +247,7 @@
         "print(vocab)\n",
         "len(vocab)"
       ],
-      "execution_count": 7,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 38
         }
       ]
     },
@@ -311,7 +299,7 @@
       "metadata": {
         "id": "jroDkrLPkAoC",
         "colab_type": "code",
-        "outputId": "c2ee28c1-1cb3-47cd-ffcc-e5350d650bef",
+        "outputId": "4a1daec7-c108-46d0-b083-922d197501a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -321,7 +309,7 @@
         "char_to_ind = {u:i for i, u in enumerate(vocab)}\n",
         "print(char_to_ind)"
       ],
-      "execution_count": 8,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +325,7 @@
       "metadata": {
         "id": "YWyqN_ZcL2jy",
         "colab_type": "code",
-        "outputId": "517dffe0-73a0-4dc7-e4ad-ba370529973e",
+        "outputId": "cb1b5589-3e7b-42de-e71d-c2483b52839e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -347,7 +335,7 @@
         "ind_to_char = np.array(vocab)\n",
         "print(ind_to_char)"
       ],
-      "execution_count": 9,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,7 +355,7 @@
       "metadata": {
         "id": "rL2sfe9eL89v",
         "colab_type": "code",
-        "outputId": "313f5492-bdfd-4da8-e078-60ea431f853f",
+        "outputId": "f921f478-61bd-4f72-919c-aa7a3ccca8de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -377,7 +365,7 @@
         "encoded_text = np.array([char_to_ind[c] for c in text])\n",
         "len(encoded_text)"
       ],
-      "execution_count": 10,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +377,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 41
         }
       ]
     },
@@ -408,7 +396,7 @@
       "metadata": {
         "id": "6gSM2wsJMnMq",
         "colab_type": "code",
-        "outputId": "6b5731e9-9e23-45e4-a40b-ba48902dbcf9",
+        "outputId": "90fb3f34-c1c5-48a7-aad6-0ace52ef3991",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -418,7 +406,7 @@
         "sample = text[:100]\n",
         "print(sample)"
       ],
-      "execution_count": 11,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +425,7 @@
       "metadata": {
         "id": "BlBlcNvCM_tg",
         "colab_type": "code",
-        "outputId": "cec8ceef-d13d-4220-b19e-5698eaa21bcd",
+        "outputId": "a16c57c7-20de-451a-ca81-b05e319b38b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -447,7 +435,7 @@
         "#printing the corresponding encoded text of the sample\n",
         "encoded_text[:100]"
       ],
-      "execution_count": 12,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +452,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 43
         }
       ]
     },
@@ -485,7 +473,7 @@
       "metadata": {
         "id": "LE_KEKkuNUM1",
         "colab_type": "code",
-        "outputId": "b32838a8-0384-4bdc-c490-d886e359bd5a",
+        "outputId": "8f7b2319-293b-4f8d-8d59-8f55f24ac377",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -494,7 +482,7 @@
       "source": [
         "print(text[:500])"
       ],
-      "execution_count": 13,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -522,7 +510,7 @@
       "metadata": {
         "id": "sId8lKDjN6Ch",
         "colab_type": "code",
-        "outputId": "5b120f10-77de-4066-be85-fb0c5be363d3",
+        "outputId": "f2cbd4f2-dcc7-4619-d39e-3ce67dd42b24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -532,7 +520,7 @@
         "line = \"From fairest creatures we desire increase\"\n",
         "print(len(line))"
       ],
-      "execution_count": 14,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +536,7 @@
       "metadata": {
         "id": "ZguReuKNN_Ne",
         "colab_type": "code",
-        "outputId": "deadd7a5-c859-4217-ad1a-9713d69974e6",
+        "outputId": "c2529fb3-6844-462b-d962-da5e62eab64f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -561,7 +549,7 @@
         "\n",
         "print(len(part_stanza))"
       ],
-      "execution_count": 15,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +596,7 @@
       "metadata": {
         "id": "9BNeUeLW1pbe",
         "colab_type": "code",
-        "outputId": "ef973d61-1dbf-4ad1-c887-938d3a19e48a",
+        "outputId": "c9e3c75e-1c58-4c24-b1a6-920a6bf6b5e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -618,7 +606,7 @@
         "total_num_seq = len(text)//(seq_len+1)\n",
         "total_num_seq"
       ],
-      "execution_count": 17,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +618,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 48
         }
       ]
     },
@@ -639,7 +627,7 @@
       "metadata": {
         "id": "EYjLxt7g1tnZ",
         "colab_type": "code",
-        "outputId": "25d145ea-1afb-4fda-e037-e84c7f919a03",
+        "outputId": "cf7b895d-99ac-45b2-a335-bde413425edc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 572
@@ -652,7 +640,7 @@
         "for i in char_dataset.take(30):\n",
         "     print(ind_to_char[i.numpy()])"
       ],
-      "execution_count": 18,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,7 +702,7 @@
       "metadata": {
         "id": "HPrwaXkYLeIh",
         "colab_type": "code",
-        "outputId": "d90089e2-8495-4e39-f1d2-215587aeab32",
+        "outputId": "1e74f484-6f32-4dc0-d70b-9ae032f2bb0a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -724,7 +712,7 @@
         "sequences = char_dataset.batch(seq_len+1, drop_remainder=True)\n",
         "sequences"
       ],
-      "execution_count": 19,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +724,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 50
         }
       ]
     },
@@ -775,7 +763,7 @@
       "metadata": {
         "id": "5LtfgIj0MjAf",
         "colab_type": "code",
-        "outputId": "5e996d8a-ddf8-408a-81e4-2cd30bbb2719",
+        "outputId": "9645cc73-5494-455b-d607-51d6dffea4e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -785,7 +773,7 @@
         "dataset = sequences.map(create_seq_targets)\n",
         "dataset"
       ],
-      "execution_count": 21,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +785,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 52
         }
       ]
     },
@@ -806,7 +794,7 @@
       "metadata": {
         "id": "F5y4CnmxMmBx",
         "colab_type": "code",
-        "outputId": "a62ac126-54bf-469b-ce3b-1ada3da63321",
+        "outputId": "328f5bb9-621b-4750-e2b7-099b81aa2b77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
@@ -821,7 +809,7 @@
         "    # There is an extra whitespace!\n",
         "    print(''.join(ind_to_char[target_txt.numpy()]))"
       ],
-      "execution_count": 22,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,7 +877,7 @@
       "metadata": {
         "id": "AquQW5lmx6AH",
         "colab_type": "code",
-        "outputId": "2573a9b6-63be-49d7-e23d-19485f66c52b",
+        "outputId": "b383ca90-ccf6-4c68-c83e-2355d04ca3d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -898,7 +886,7 @@
       "source": [
         "dataset"
       ],
-      "execution_count": 24,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +898,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 55
         }
       ]
     },
@@ -994,12 +982,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 87
         },
-        "outputId": "6b5325cf-98f3-4c3b-dc79-2431d615b81b"
+        "outputId": "27c9e61c-5158-47f8-bc2b-7b6eebb2118a"
       },
       "source": [
         "help(sparse_categorical_crossentropy)"
       ],
-      "execution_count": 27,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -1090,25 +1078,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 260
         },
-        "outputId": "cc0a1d03-521e-4ed0-e8a4-fb50bfc80b76"
+        "outputId": "37b0a36c-6c55-4462-cbeb-cea6ffe2f1af"
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 31,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential\"\n",
+            "Model: \"sequential_1\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding (Embedding)        (128, None, 64)           5376      \n",
+            "embedding_1 (Embedding)      (128, None, 64)           5376      \n",
             "_________________________________________________________________\n",
-            "gru (GRU)                    (128, None, 1026)         3361176   \n",
+            "gru_1 (GRU)                  (128, None, 1026)         3361176   \n",
             "_________________________________________________________________\n",
-            "dense (Dense)                (128, None, 84)           86268     \n",
+            "dense_1 (Dense)              (128, None, 84)           86268     \n",
             "=================================================================\n",
             "Total params: 3,452,820\n",
             "Trainable params: 3,452,820\n",
@@ -1136,6 +1124,37 @@
       "cell_type": "code",
       "metadata": {
         "id": "WgFB4m6WOAn0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d7efb41b-2d0a-479b-f80d-8342123d1807"
+      },
+      "source": [
+        "for input_example_batch, target_example_batch in dataset.take(1):\n",
+        "\n",
+        "  # Predict off some random batch\n",
+        "  example_batch_predictions = model(input_example_batch)\n",
+        "\n",
+        "  # Display the dimensions of the predictions\n",
+        "  print(example_batch_predictions.shape, \" <=== (batch_size, sequence_length, vocab_size)\")\n"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(128, 120, 84)  <=== (batch_size, sequence_length, vocab_size)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1t9CcFhmmMeL",
         "colab_type": "code",
         "colab": {}
       },
